🚨 fix warning from modernizer plugin
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>